feat: enhance arithmetic operations to support rational and complex numbers